[package]
name = "progress-clocks"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.10", features = ["js"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "serde"] }
wasm-bindgen = "0.2.84"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
